# W3

./: README.md  pyproject.toml
notebooks/: Exercise M1.01.ipynb  Exercise M1.02.ipynb  Exercise M1.03.ipynb  Exercise M1.04.ipynb  Exercise M1.05.ipynb  Exercise M2.01.ipynb  Exercise M3.01.ipynb  Exercise M3.02.ipynb  Exercise M7.01.ipynb  Exercise M7.02.ipynb  Exercise M7.03.ipynb
